Fix player selection overflow problems

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -24662,28 +24662,12 @@ main.cover {
 }
 
 .pending-handicap-box {
-  background: #fffdc1;
+  background: #eeeca9;
 }
 
 .blind-handicap-box {
-  background: ghostwhite;
-}
-
-.handicap-description,
-.pending-handicap-description {
-  border-left-width: 3px;
-  -webkit-box-align: start;
-  -ms-flex-align: start;
-  align-items: start;
-  text-align: start;
-}
-
-.handicap-description {
-  border-left: #d4ffd5;
-}
-
-.pending-handicap-description {
-  border-left: #fffdc1;
+  background: #704525;
+  color: white !important;
 }
 
 .player-category-AA,
@@ -24714,8 +24698,68 @@ main.cover {
 }
 
 .player-category-blind {
-  background: ghostwhite !important;
+  background: whitesmoke !important;
   color: black !important;
+}
+
+div.player-selection-dialog-legend {
+  text-align: left;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 0;
+}
+
+div.player-selection-dialog-legend span {
+  white-space: nowrap;
+  overflow: auto;
+  width: 100%;
+}
+
+div.player-selection-dialog-legend-player-categories {
+  margin: 0;
+  border: 1px solid #ced4da;
+  border-radius: 0.25rem;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+div.player-selection-dialog-legend-player-categories span {
+  width: 25%;
+  margin: 0 auto;
+}
+
+.handicap-description,
+.pending-handicap-description,
+.blind-handicap-description {
+  border-left: 8px solid lightgray;
+  padding-left: 0.25rem;
+}
+
+.handicap-description {
+  border-color: #91ff98;
+}
+
+.pending-handicap-description {
+  border-color: #eeeca9;
+}
+
+.pending-handicap-description {
+  border-color: #eeeca9;
+}
+
+.blind-handicap-description {
+  border-color: #704525;
 }
 
 div.loading-table {
